--- a/src/partials/programme-reasons.html
+++ b/src/partials/programme-reasons.html
@@ -1,9 +1,10 @@
 <section class="programme section">
-    <div class="container">
+    <div class="programme__wrapper">
+        <div class="container">
         <h2 class="programme__heading">Наша программа</h2>
         <ul class="semester-list list">
             <li class="semester-list__item">
-                <p class="semester-list__number">1 cеместр</p>
+                <p class="semester-list__number"><span class="semester-list__number_upper">1</span>&nbsp cеместр</p>
                 <ul class="skills-list list">
                     <li class="skills-list__item">
                         <p class="skills-list__name" lang="en">Grammar</p>
@@ -22,7 +23,7 @@
                 </ul>
             </li>
             <li class="semester-list__item">
-                <p class="semester-list__number">2 cеместр</p>
+                <p class="semester-list__number"><span class="semester-list__number_upper">2</span>&nbsp cеместр</p>
                 <ul class="skills-list list">
                     <li class="skills-list__item">
                         <p class="skills-list__name" lang="en">Grammar</p>
@@ -43,7 +44,7 @@
                 </ul>
             </li>
             <li class="semester-list__item">
-                <p class="semester-list__number">3 cеместр</p>
+                <p class="semester-list__number"><span class="semester-list__number_upper">3</span>&nbsp cеместр</p>
                 <ul class="skills-list list">
                     <li class="skills-list__item">
                         <p class="skills-list__name" lang="en">Grammar</p>
@@ -69,7 +70,7 @@
                 </ul>
             </li>
             <li class="semester-list__item">
-                <p class="semester-list__number">4 cеместр</p>
+                <p class="semester-list__number"><span class="semester-list__number_upper">4</span>&nbsp cеместр</p>
                 <ul class="skills-list list">
                     <li class="skills-list__item">
                         <p class="skills-list__name" lang="en">Grammar</p>
@@ -96,7 +97,7 @@
                 </ul>
             </li>
             <li class="semester-list__item">
-                <p class="semester-list__number">5 cеместр</p>
+                <p class="semester-list__number"><span class="semester-list__number_upper">5</span>&nbsp cеместр</p>
                 <p class="skills-list__name skills-list__name--final"></p>
                 <ul class="content-list content-list--final list">
                     <li class="content-list__item" lang="en">Revision</li>
@@ -105,17 +106,19 @@
             </li>
         </ul>
     </div>
-</section>
-<section class="reasons section">
+</div>
+</div>
     <div class="container">
-        <h2 class="reasons__heading">Почему нас выбирают</h2>
-        <ul class="reasons-list list">
-            <li class="reasons-list__item">Обучение в малых командах</li>
-            <li class="reasons-list__item">Визуализированные конспекты</li>
-            <li class="reasons-list__item">Каждое занятие имеет цель и конкретный результат</li>
-            <li class="reasons-list__item">Реальные результаты преподавателя</li>
-            <li class="reasons-list__item">Прогамма курса соответствует требованиям МОН Украины</li>
-            <li class="reasons-list__item">Набор команд по уровням знаний</li>
-        </ul>
+        <div class="reasons">
+                <h2 class="reasons__heading">Почему нас выбирают</h2>
+                <ul class="reasons-list list">
+                    <li class="reasons-list__item">Обучение в малых командах</li>
+                    <li class="reasons-list__item">Визуализированные конспекты</li>
+                    <li class="reasons-list__item">Каждое занятие имеет цель и конкретный результат</li>
+                    <li class="reasons-list__item">Реальные результаты преподавателя</li>
+                    <li class="reasons-list__item">Прогамма курса соответствует требованиям МОН Украины</li>
+                    <li class="reasons-list__item">Набор команд по уровням знаний</li>
+                </ul>
+        </div>
     </div>
 </section>
