--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -5,7 +5,12 @@
     padding-top: 40px;
   }
 
+  @media screen and (min-width: $desktop) {
+    padding-top: 35px;
+  }
+
   & .container {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -31,6 +36,16 @@
     @media screen and (min-width: $tablet) {
       display: flex;
       margin: 0 40px 0 auto;
+    }
+
+    @media screen and (min-width: $desktop) {
+      margin: 0 0 0 60px;
+      padding: 25px 21px;
+      max-width: 340px;
+      font-size: 14px;
+      line-height: 1.21;
+
+      letter-spacing: 0.14em;
     }
   }
 
@@ -59,6 +74,10 @@
   @media screen and (min-width: $tablet) {
     width: 21px;
     height: 14px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: none;
   }
 
   &__icon {
@@ -91,21 +110,28 @@
 }
 
 .nav {
+  position: absolute;
   @media screen and (max-width: $desktop - 1) {
     display: none;
     width: 100%;
     height: 100%;
     padding: 110px 20px 0 20px;
-    position: absolute;
     top: 0;
     left: 0;
 
     background-color: rgba(17, 21, 24, 0.9);
     z-index: 900;
+  }
 
-    @media screen and (min-width: $tablet) {
-      padding-top: 160px;
-    }
+  @media screen and (min-width: $tablet) {
+    padding-top: 160px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    padding: 0;
+    left: 278px;
+    top: 50%;
+    transform: translateY(-50%);
   }
 
   &__list {
@@ -113,9 +139,17 @@
       width: 280px;
     }
 
-    @media screen and (min-width: $tablet) {
+    @media screen and (min-width: $tablet) and (max-width: $desktop - 1) {
       width: 340px;
     }
+
+    @media screen and (min-width: $desktop) {
+      display: flex;
+    }
+  }
+
+  &__item:not(:last-child) {
+    margin-right: 40px;
   }
 
   &__link {
@@ -128,6 +162,15 @@
 
     @media screen and (min-width: $tablet) {
       font-size: 26px;
+    }
+
+    @media screen and (min-width: $desktop) {
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.21;
+      text-transform: uppercase;
+
+      color: $text-grey;
     }
   }
 
