--- a/src/sass/layout/_teacher.scss
+++ b/src/sass/layout/_teacher.scss
@@ -1,5 +1,4 @@
 .teacher {
-  padding-top: 39px;
   margin-bottom: 50px;
 }
 .teacher__title {
@@ -53,7 +52,7 @@
   @include font(500, 12px, 1.67, 00.06em, $text-grey);
   color: $text-grey;
   &:not(:last-child) {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
   }
 }
 .teacher__link {
@@ -67,6 +66,12 @@
   .teacher__box {
     display: flex;
   }
+
+  .teacher__title {
+    @include font(800, 26px, 1.3, 0.03em, $text-dark);
+    margin-bottom: 30px;
+  }
+
   .teacher__content {
     display: block;
     margin-left: 40px;
@@ -78,16 +83,13 @@
   }
 }
 @media screen and (min-width: $desktop) {
-  .teacher {
-    padding-top: 130px;
-  }
   .teacher__title {
     @include font(800, 46px, 1.3, 0.03em, $text-dark);
     margin-bottom: 50px;
   }
   .teacher__name {
     @include font(800, 30px, 1.23, 0.08em, $text-dark);
-    margin-bottom: 45px;
+    margin-bottom: 30px;
   }
   .teacher__name::after {
     margin-top: 15px;
@@ -99,15 +101,21 @@
   .teacher__achievements {
     max-width: 600px;
   }
+
+  .teacher__item {
+    margin-bottom: 25px;
+  }
+
   .teacher__icon {
-    max-width: 24px;
+    max-width: 25px;
     max-height: 20px;
+    margin-right: 35px;
   }
   .teacher__item-text {
     @include font(600, 16px, 1.21, 0.06em, $text-dark);
   }
   .teacher__achievements {
-    margin-bottom: 43px;
+    margin-bottom: 20px;
   }
   .teacher__text {
     @include font(500, 18px, 1.55, 0.08em, $text-grey);
