--- a/css/main.css
+++ b/css/main.css
@@ -124,14 +124,14 @@ button {
 .titul-two {
   text-align: center;
   margin-top: 15px;
-  font-family: Titan One;
+  font-family: "Titan One", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 34px;
   line-height: 1.15;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: #d41443;
+  color: var(--text-red-color);
 }
 
 @media screen and (min-width: 768px) {
@@ -150,13 +150,13 @@ button {
 
 .pretitul-two {
   text-align: center;
-  font-family: Titan One;
+  font-family: "Titan One", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.17;
   text-transform: uppercase;
-  color: #ffa5ba;
+  color: var(--text-pink-color);
 }
 
 @media screen and (min-width: 768px) {
@@ -175,7 +175,7 @@ button {
 }
 
 .title-three {
-  font-family: Titan One;
+  font-family: "Titan One", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 30px;
@@ -183,7 +183,7 @@ button {
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: var(--primary-white-color);
 }
 
 /* --------------КНОПКИ БОЛЬШИЕ---------------------*/
@@ -238,25 +238,33 @@ header .btn {
 }
 
 .next-one {
-  fill: #ffffff;
+  fill: var(--primary-white-color);
 }
 
 .next-two {
-  fill: #d41443;
+  fill: var(--text-red-color);
 }
 
 .appeal-one {
-  background: #d41342;
-  color: #ffffff;
+  background: var(--text-red-color);
+  color: var(--primary-white-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.appeal-one:hover, .appeal-one:focus {
+  background: var(--text-red-color);
 }
 
 .appeal-two {
-  background: #ffffff;
-  color: #d41443;
+  background: var(--primary-white-color);
+  color: var(--text-red-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .appeal-two:hover, .appeal-two:focus {
-  background: #ecebeb;
+  background: var(--button-hover-color);
 }
 
 .header {
@@ -265,26 +273,21 @@ header .btn {
   line-height: 1.3;
   color: var(--primary-white-color);
   position: absolute;
-  z-index: 2;
   background-color: transparent;
   justify-content: space-between;
   top: 0;
   width: 100%;
-  padding: 6px 20px 0 20px;
+  padding-top: 6px;
 }
 
 @media screen and (min-width: 768px) {
   .header {
-    width: 100%;
-    max-width: 768px;
-    padding: 37px 34px 0 34px;
+    padding-top: 37px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .header {
-    max-width: 1280px;
-    padding: 37px 115px 0 115px;
     font-size: 16px;
   }
 }
@@ -300,11 +303,10 @@ header .btn {
 }
 
 .menu-button {
-  z-index: 5;
+  z-index: 2000;
   top: 15px;
   right: 20px;
   background-size: cover;
-  position: absolute;
   background-color: transparent;
   stroke: var(--text-red-color);
   margin: 0;
@@ -312,18 +314,26 @@ header .btn {
   border: none;
 }
 
+.menu-button.is-open {
+  top: 15px;
+  right: 20px;
+  position: absolute;
+}
+
 @media screen and (min-width: 768px) {
-  .menu-button {
-    top: 50px;
-    right: 225px;
-  }
   .menu-button.is-open {
-    transform: translate(1000%, -100%);
+    position: absolute;
+    top: 15px;
+    right: 20px;
   }
 }
 
+.logo {
+  flex-grow: 1;
+}
+
 .menu-container {
-  z-index: 1;
+  z-index: 1500;
   position: absolute;
   top: 0;
   right: 0;
@@ -341,7 +351,7 @@ header .btn {
 
 @media screen and (min-width: 768px) {
   .menu-container {
-    max-width: 254px;
+    min-width: 40%;
   }
 }
 
@@ -362,6 +372,10 @@ header .btn {
   .header-nav {
     display: none;
   }
+}
+
+.header-btn {
+  margin-left: 30px;
 }
 
 @media screen and (max-width: 767px) {
@@ -435,34 +449,67 @@ header .btn {
 }
 
 .mob-menu-btn {
-  margin: 0 auto;
+  margin-left: 21px;
   margin-bottom: 19px;
   max-width: 200px;
   justify-content: center;
 }
 
+@media screen and (min-width: 768px) {
+  .mob-menu-item {
+    padding-left: 24px;
+  }
+  .mob-menu-btn {
+    margin-left: 24px;
+  }
+}
+
 .hero {
   display: block;
   height: 502px;
-  background-image: url(../images/hero/mob-icecream.png), radial-gradient(circle farthest-side at 61% 51%, #ffa5ba 172px, #ffb8ca 172px);
+  background-image: url(../images/hero/mob-icecream.png), radial-gradient(circle farthest-side at 61% 51%, var(--hero-elipse-color) 172px, var(--hero-background-color) 172px);
   background-size: 171px, cover;
   background-repeat: no-repeat;
   background-position: left 63% bottom 0, left 0 top 0;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 280px) and (max-width: 767px), screen and (min-resolution: 192dpi) and (min-width: 280px) and (max-width: 767px), screen and (min-resolution: 2dppx) and (min-width: 280px) and (max-width: 767px) {
+  .hero {
+    background-image: url(../images/hero/mob-icecream@2x.png), radial-gradient(circle farthest-side at 61% 51%, var(--hero-elipse-color) 172px, var(--hero-background-color) 172px);
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px) and (max-width: 1279px), screen and (min-resolution: 192dpi) and (min-width: 768px) and (max-width: 1279px), screen and (min-resolution: 2dppx) and (min-width: 768px) and (max-width: 1279px) {
   .hero {
     height: 399px;
-    background-image: url(../images/hero/tab-icecream.png), radial-gradient(circle farthest-side at 61% 48%, #ffa5ba 162px, #ffb8ca 162px);
+    background-image: url(../images/hero/tab-icecream@2x.png), radial-gradient(circle farthest-side at 61% 48%, var(--hero-elipse-color) 162px, var(--hero-background-color) 162px);
     background-size: 143px, cover;
     background-position: left 58.5% bottom 0, left 0 top 0;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .hero {
+    height: 399px;
+    background-image: url(../images/hero/tab-icecream.png), radial-gradient(circle farthest-side at 61% 48%, var(--hero-elipse-color) 162px, var(--hero-background-color) 162px);
+    background-size: 143px, cover;
+    background-position: left 58.5% bottom 0, left 0 top 0;
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1280px), screen and (min-resolution: 192dpi) and (min-width: 1280px), screen and (min-resolution: 2dppx) and (min-width: 1280px) {
   .hero {
     height: 665px;
-    background-image: url(../images/hero/desktop-icecream.png), radial-gradient(circle farthest-side at 58% 48%, #ffa5ba 269px, #ffb8ca 269px);
+    background-image: url(../images/hero/desktop-icecream@2x.png), radial-gradient(circle farthest-side at 58% 48%, var(--hero-elipse-color) 269px, var(--hero-background-color) 269px);
+    background-size: 236px, cover;
+    background-position: left 56% bottom 0, left 0 top 0;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero {
+    height: 665px;
+    background-image: url(../images/hero/desktop-icecream.png), radial-gradient(circle farthest-side at 58% 48%, var(--hero-elipse-color) 269px, var(--hero-background-color) 269px);
     background-size: 236px, cover;
     background-position: left 56% bottom 0, left 0 top 0;
   }
@@ -479,7 +526,7 @@ header .btn {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-titul-block {
     margin-top: 171px;
     margin-left: 95px;
@@ -488,7 +535,7 @@ header .btn {
 
 .hero-titul {
   width: 220px;
-  font-family: Titan One;
+  font-family: "Titan One", sans-serif;
   font-weight: normal;
   font-size: 26px;
   line-height: 1.15;
@@ -504,7 +551,7 @@ header .btn {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-titul {
     width: 280px;
     font-size: 38px;
@@ -515,7 +562,7 @@ header .btn {
 .hero-tityl-one {
   font-size: 48px;
   line-height: 0.96;
-  color: #d41443;
+  color: var(--text-red-color);
 }
 
 @media screen and (min-width: 768px) {
@@ -525,7 +572,7 @@ header .btn {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-tityl-one {
     font-size: 58px;
     line-height: 0.9;
@@ -538,7 +585,7 @@ header .btn {
   padding: 0 14px;
   border-radius: 20px;
   /*шрифты*/
-  font-family: DM Sans;
+  font-family: "DM Sans", sans-serif;
   font-weight: 400;
   font-size: 8px;
   line-height: 1.25;
@@ -568,7 +615,7 @@ header .btn {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-milk-block {
     left: 77px;
     bottom: 45px;
@@ -579,7 +626,7 @@ header .btn {
   height: 126px;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-milk-img {
     height: 191px;
   }
@@ -588,14 +635,15 @@ header .btn {
 .hero-text {
   position: relative;
   margin-left: -4px;
+  font-family: "DM Sans", sans-serif;
   width: 114px;
   font-weight: 400;
   font-size: 8px;
   line-height: 150%;
-  color: #ffffff;
+  color: var(--primary-white-color);
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-text {
     width: 200px;
     margin-left: 30px;
@@ -612,16 +660,16 @@ header .btn {
   border-radius: 50%;
   height: 18px;
   width: 18px;
-  background-color: #ffffff;
+  background-color: var(--primary-white-color);
 }
 
 .btn-arrow svg {
   height: 33%;
   width: 33%;
-  fill: #d41443;
+  fill: var(--text-red-color);
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .btn-arrow {
     height: 26px;
     width: 26px;
@@ -640,11 +688,11 @@ header .btn {
     flex-direction: column;
     right: 44px;
     top: 96px;
-    z-index: 1000;
+    z-index: 2;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-network-block {
     right: 115px;
     top: 160px;
@@ -652,34 +700,67 @@ header .btn {
 }
 
 .hero-network {
-  display: inline-block;
-  height: 53px;
-  font-family: Titan One;
+  position: relative;
+  font-family: "Titan One", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 28px;
   line-height: 1.143;
+  text-align: right;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: #d41443;
+  color: var(--text-red-color);
 }
 
-@media screen and (min-width: 1200px) {
+.hero-network::after {
+  position: absolute;
+  top: -2px;
+  right: -10px;
+  content: '';
+  display: block;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #ffffff;
+  z-index: -1;
+}
+
+@media screen and (min-width: 1280px) {
+  .hero-network::after {
+    width: 30px;
+    height: 30px;
+    top: -4px;
+    right: -18px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
   .hero-network {
     font-size: 46px;
-    line-height: 15.2;
+    line-height: 1.152;
+  }
+}
+
+.second {
+  margin-top: 14px;
+}
+
+@media screen and (min-width: 1280px) {
+  .second {
+    margin-top: 18px;
   }
 }
 
 .hero-network-text {
   font-weight: normal;
+  font-family: "DM Sans", sans-serif;
   font-size: 8px;
   line-height: 1.25;
   text-align: right;
-  color: #ffffff;
+  color: var(--primary-white-color);
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-network-text {
     font-size: 14px;
     line-height: 1.29;
@@ -700,7 +781,7 @@ header .btn {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-girl-img {
     right: 109px;
     height: 232px;
@@ -1148,33 +1229,32 @@ header .btn {
 }
 
 .locations {
-  height: 1375px;
-  margin-top: 212px;
-  position: relative;
+  width: 100vw;
+  height: 1390px;
   background-color: var(--description-background-color);
 }
 
 .locations .container {
-  position: absolute;
-  top: -84px;
-  left: 50%;
-  transform: translateX(-50%);
+  position: relative;
 }
 
 .locations-list {
-  margin-bottom: -20px;
+  width: 220px;
 }
 
 .locations-list-item {
   width: 220px;
   height: 427px;
   padding: 43px 20px;
-  margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
   background-color: var(--primary-white-color);
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
+}
+
+.locations-list-item:not(:last-child) {
+  margin-bottom: 20px;
 }
 
 .locations-item-title {
@@ -1187,6 +1267,12 @@ header .btn {
   color: var(--primary-white-color);
   background-color: var(--location-cafe-color);
   border-radius: 4px;
+}
+
+.location-positioning {
+  position: absolute;
+  top: -84px;
+  left: calc(50% - 110px);
 }
 
 .foodtruck {
@@ -1243,10 +1329,12 @@ header .btn {
 @media screen and (min-width: 768px) {
   .locations {
     height: 595px;
+    width: 100vw;
     margin-top: 197px;
   }
-  .locations .container {
+  .location-positioning {
     top: -78px;
+    left: calc(50% - 350px);
   }
   .locations-item-title {
     width: 73px;
@@ -1258,17 +1346,21 @@ header .btn {
     width: 138px;
   }
   .locations-list {
+    width: 700px;
     margin-bottom: 81px;
     margin-top: 0;
-    margin-left: -20px;
     display: flex;
   }
   .locations-list-item {
     min-height: 544px;
     padding: 50px 31px;
-    margin-bottom: 0;
     margin-right: 0;
+  }
+  .locations-list-item:not(:first-child) {
     margin-left: 20px;
+  }
+  .locations-list-item:not(:last-child) {
+    margin-bottom: 0;
   }
   .text-title-style {
     font-size: 14px;
@@ -1309,24 +1401,30 @@ header .btn {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .locations {
+    width: 100vw;
     background-image: url(../images/locations/desktop-locations-backgroung.png);
     background-repeat: no-repeat;
-    background-size: 1280px;
+    background-position: center;
+    background-size: contain;
     height: 620px;
     margin-top: 234px;
   }
-  .locations .container {
+  .location-positioning {
     top: -102px;
+    left: calc(50% - 525px);
   }
   .locations-list {
+    width: 1050px;
     margin-bottom: 86px;
   }
   .locations-list-item {
     min-height: 572px;
     width: 330px;
     padding: 52px 43px;
+  }
+  .locations-list-item:not(:first-child) {
     margin-left: 31px;
   }
   .text-title-style {
@@ -1539,7 +1637,8 @@ header .btn {
   color: var(--primary-white-color);
   border-radius: 50%;
   background: #fea5bb;
-  transition: background 250ms linear;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 768px) {
