--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -3,89 +3,92 @@
 <section class="locations">
     <div class="container">
         <h2 class="visually-hidden">our locations</h2>
-        <ul class="locations-list">
-
-            <li class="locations-list-item">
-                <h3 class="locations-item-title">CAFE</h3>
-                <div class="city-description">
-                    <h4 class="city-name text-title-style">Chicago</h4>
-                    <p class="location-description text-description-style">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                </div>
-                <ul class="working-days-sublist">
-                    <li class="sublist-item">
-                        <p class="working-days text-title-style">Monday - Friday</p>
-                        <p class="working-hours text-title-style">06:00 AM - 10:00 PM</p>
-                    </li>
-                    <li class="sublist-item">
-                        <p class="working-days text-title-style">Saturday - Sunday</p>
-                        <p class="working-hours text-title-style">08:00 AM - 16:00 PM</p>
-                    </li>
-                </ul>
-                <address class="location-address">
-                    <a href="tel: +610383766284" class="location-tel text-description-style">+61(0) 383 766 284</a>
-                    <a href="mailto: noreply@envato.com" class="location-mail text-description-style">noreply@envato.com</a>
-                </address>
-            </li>
         
-            <li class="locations-list-item">
-                <h3 class="locations-item-title foodtruck">FOOD TRUCK</h3>
-                <div class="city-description">
-                    <h4 class="city-name text-title-style">Los Angeles</h4>
-                    <p class="location-description text-description-style">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                </div>
-                <ul class="working-days-sublist list">
-                    <li class="sublist-item">
-                        <p class="working-days text-title-style">Monday - Friday</p>
-                        <p class="working-hours text-title-style">06:00 AM - 10:00 PM</p>
-                    </li>
-                    <li class="sublist-item">
-                        <p class="working-days text-title-style">Saturday - Sunday</p>
-                        <p class="working-hours text-title-style">08:00 AM - 16:00 PM</p>
-                    </li>
-                </ul>
-                <address class="location-address">
-                    <a href="tel: +610383766284" class="location-tel text-description-style">+61(0) 383 766 284</a>
-                    <a href="mailto: noreply@envato.com" class="location-mail text-description-style">noreply@envato.com</a>
-                </address>
-            </li>
+        <div class="location-positioning">
+            <ul class="locations-list">
 
-            <li class="locations-list-item">
-                <h3 class="locations-item-title">CAFE</h3>
-                <div class="city-description">
-                    <h4 class="city-name text-title-style">New York</h4>
-                    <p class="location-description text-description-style">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                </div>
-                <ul class="working-days-sublist">
-                    <li class="sublist-item">
-                        <p class="working-days text-title-style">Monday - Friday</p>
-                        <p class="working-hours text-title-style">06:00 AM - 10:00 PM</p>
-                    </li>
-                    <li class="sublist-item">
-                        <p class="working-days text-title-style">Saturday - Sunday</p>
-                        <p class="working-hours text-title-style">08:00 AM - 16:00 PM</p>
-                    </li>
-                </ul>
-                <address class="location-address">
-                    <a href="tel: +610383766284" class="location-tel text-description-style">+61(0) 383 766 284</a>
-                    <a href="mailto: noreply@envato.com" class="location-mail text-description-style">noreply@envato.com</a>
-                </address>
-            </li>
-
-        </ul>
-
-        <div class="location-buttons">
-            <button type="button" class="btn appeal-one">
-                Our Locations
-                <svg class="btn-icon next-one">
-                    <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
-                  </svg>
-            </button>
-            <button type="button" class="btn appeal-two">
-                Franchise
-                <svg class="btn-icon next-two">
-                    <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
-                  </svg>
-            </button>
+                <li class="locations-list-item">
+                    <h3 class="locations-item-title">CAFE</h3>
+                    <div class="city-description">
+                        <h4 class="city-name text-title-style">Chicago</h4>
+                        <p class="location-description text-description-style">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                    </div>
+                    <ul class="working-days-sublist">
+                        <li class="sublist-item">
+                            <p class="working-days text-title-style">Monday - Friday</p>
+                            <p class="working-hours text-title-style">06:00 AM - 10:00 PM</p>
+                        </li>
+                        <li class="sublist-item">
+                            <p class="working-days text-title-style">Saturday - Sunday</p>
+                            <p class="working-hours text-title-style">08:00 AM - 16:00 PM</p>
+                        </li>
+                    </ul>
+                    <address class="location-address">
+                        <a href="tel: +610383766284" class="location-tel text-description-style">+61(0) 383 766 284</a>
+                        <a href="mailto: noreply@envato.com" class="location-mail text-description-style">noreply@envato.com</a>
+                    </address>
+                </li>
+            
+                <li class="locations-list-item">
+                    <h3 class="locations-item-title foodtruck">FOOD TRUCK</h3>
+                    <div class="city-description">
+                        <h4 class="city-name text-title-style">Los Angeles</h4>
+                        <p class="location-description text-description-style">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                    </div>
+                    <ul class="working-days-sublist list">
+                        <li class="sublist-item">
+                            <p class="working-days text-title-style">Monday - Friday</p>
+                            <p class="working-hours text-title-style">06:00 AM - 10:00 PM</p>
+                        </li>
+                        <li class="sublist-item">
+                            <p class="working-days text-title-style">Saturday - Sunday</p>
+                            <p class="working-hours text-title-style">08:00 AM - 16:00 PM</p>
+                        </li>
+                    </ul>
+                    <address class="location-address">
+                        <a href="tel: +610383766284" class="location-tel text-description-style">+61(0) 383 766 284</a>
+                        <a href="mailto: noreply@envato.com" class="location-mail text-description-style">noreply@envato.com</a>
+                    </address>
+                </li>
+    
+                <li class="locations-list-item">
+                    <h3 class="locations-item-title">CAFE</h3>
+                    <div class="city-description">
+                        <h4 class="city-name text-title-style">New York</h4>
+                        <p class="location-description text-description-style">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                    </div>
+                    <ul class="working-days-sublist">
+                        <li class="sublist-item">
+                            <p class="working-days text-title-style">Monday - Friday</p>
+                            <p class="working-hours text-title-style">06:00 AM - 10:00 PM</p>
+                        </li>
+                        <li class="sublist-item">
+                            <p class="working-days text-title-style">Saturday - Sunday</p>
+                            <p class="working-hours text-title-style">08:00 AM - 16:00 PM</p>
+                        </li>
+                    </ul>
+                    <address class="location-address">
+                        <a href="tel: +610383766284" class="location-tel text-description-style">+61(0) 383 766 284</a>
+                        <a href="mailto: noreply@envato.com" class="location-mail text-description-style">noreply@envato.com</a>
+                    </address>
+                </li>
+    
+            </ul>
+    
+            <div class="location-buttons">
+                <button type="button" class="btn appeal-one">
+                    Our Locations
+                    <svg class="btn-icon next-one">
+                        <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
+                      </svg>
+                </button>
+                <button type="button" class="btn appeal-two">
+                    Franchise
+                    <svg class="btn-icon next-two">
+                        <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
+                      </svg>
+                </button>
+            </div>
         </div>
     </div>
 
