adds button animation

--- a/src/sass/_production.scss
+++ b/src/sass/_production.scss
@@ -150,6 +150,8 @@
 .button {
     z-index: 5;
   @include button($color-text-white, $color-accent, 44px);
+  @include transition(transform);
+  
   text-decoration: none;
 
   display: flex;
@@ -181,6 +183,9 @@
     background-color: $color-btn-footer;
     color: $color-text-white;
     @include transition(background-color);
+    @include transition(transform);
+    transform: scale(1.25);
+    box-shadow: 0px 8px 30px rgb(212 20 67 / 30%);
   }
 
   @media screen and (min-width: 768px) and (max-width:990px) {
