--- a/src/partials/description.html
+++ b/src/partials/description.html
@@ -45,7 +45,11 @@
               Aliquam erat volutpat. Aenean accumsan.
             </li>
           </ul>
-          <button type="button" class="btn appeal-two">
+          <button
+            type="button"
+            class="btn appeal-two"
+            onclick="document.location='https:/en.wikipedia.org/wiki/Ice_cream'"
+          >
             Read more
             <svg class="btn-icon next-two">
               <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
