scale to more added

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -35,10 +35,12 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et. dolore magna
                         aliqua facilisis.</p>
-                    <a class="more-link link" href="#">
-                        <svg class="to-right-2" width="10" height="12">
-                            <use href="./images/symbol-defs.svg#icon-arrow-right2"></use>
-                        </svg> </a>
+                    <div class="more-scale">
+                        <a class="more-link link" href="#">
+                            <svg class="to-right-2" width="10" height="12">
+                                <use href="./images/symbol-defs.svg#icon-arrow-right2"></use>
+                            </svg> </a>
+                    </div>
                 </div>
             </li>
             <li class="cards-item item">
@@ -72,10 +74,12 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et. dolore magna
                         aliqua facilisis.</p>
-                    <a class="more-link link" href="#">
-                        <svg class="to-right-2" width="10" height="12">
-                            <use href="./images/symbol-defs.svg#icon-arrow-right2"></use>
-                        </svg> </a>
+                    <div class="more-scale">
+                        <a class="more-link link" href="#">
+                            <svg class="to-right-2" width="10" height="12">
+                                <use href="./images/symbol-defs.svg#icon-arrow-right2"></use>
+                            </svg> </a>
+                    </div>
                 </div>
             </li>
             <li class="cards-item item">
@@ -110,10 +114,12 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et. dolore magna
                         aliqua facilisis.</p>
-                    <a class="more-link link" href="#">
-                        <svg class="to-right-2" width="10" height="12">
-                            <use href="./images/symbol-defs.svg#icon-arrow-right2"></use>
-                        </svg> </a>
+                    <div class="more-scale">
+                        <a class="more-link link" href="#">
+                            <svg class="to-right-2" width="10" height="12">
+                                <use href="./images/symbol-defs.svg#icon-arrow-right2"></use>
+                            </svg> </a>
+                    </div>
                 </div>
             </li>
 
