--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,7 +12,7 @@
         <span class="footer-logo-text">АДСКИЙ</span>  АНГЛИЙСКИЙ
     </p>
         </div>
-        
+        <!--контейнер для телефона-->
         <div class="footer-logo-container">
             <a class="footer-contact-tel link" href="tel:+380000000000">
                 <svg class="footer-icon-phone">
@@ -26,7 +26,7 @@
         </a>
         
     </div>
-   
+   <!--контейнер с черным фоном-->
     <div class="footer-security">
         <div class="container"><p class="footer-security-text">@ Все права защищены, 2019</p></div>
          
