открітие модального двумя кнопками

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -38,7 +38,7 @@
   </div>
   <div class="footer__copyright">
     <p class="footer__copyright-text">
-      &copy 2021 - Ice Cream. <br />
+      &copy 2021 - Ice Cream. All Rights Reserved. <br />
       Site developed by ITeens.
     </p>
   </div>
