--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -33,7 +33,7 @@
             <div class="menu__overlay"></div>
           </div>
         
-          <button class="buy-now tablet btn" type="button" data-modal-open2>Buy now
+          <button class="buy-now tablet btn" type="button" data-modal-open-tab>Buy now
             <svg class="buy-now-img">
               <use href="./images/header/sprite-hero.svg#icon-Vector1"></use>
             </svg>
@@ -72,7 +72,10 @@
                             <li class="contacts-input-item">
                               <label class="input-title">
                                 Phone Number
-                                <input type="tel" value="" name="tel" required />
+                                <input type="tel" value="" name="tel" required 
+                                pattern="[\+]\d{2}[\(]\d{1}[\)]\s\d{3}[\-]\d{3}[\-]\d{3}" minlength="18" maxlength="18"
+                                placeholder="+61(0)-xxx-xxx-xxx" />
+                                <span class="form__error">Telephone format +61(0) xxx-xxx-xxx</span>
                                 <svg class="contacts-input-img">
                                   <use
                                     href="./images/header/sprite-hero.svg#icon-input-contact2"
